[package]
name = "rust-wasm-sandbox"
version = "0.1.0"
authors = ["Constantine Solovev <constantine.solovev@gmail.com>"]
edition = "2018"
publish = false

[profile.release]

debug=false
opt-level = "z"
lto = true

[lib]

name = "rust_wasm_sandbox"
crate-type = ["cdylib"]

[dependencies]


fluence_sdk = { version = "0.0.6", features = ["wasm_logger"] }
log = "0.4"
rand = "0.5.0"
